# scribus-plugin-gettext-markdown

./: README.md
src/: CMakeLists.txt  LICENCE  README.md  markdown.cpp  markdown.h  markdown_parser.c  markdown_parser.h  markdownreader.cpp  markdownreader.h  mp_definitions.h
src/greg/: README
src/leg/: README.md
