INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(MARKDOWN_GETTEXT_PLUGIN_SOURCES
markdown.cpp
markdownreader.cpp
)

SET(SCRIBUS_MARKDOWN_GETTEXT_PLUGIN "markdowngettext")

ADD_LIBRARY(${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN} MODULE ${MARKDOWN_GETTEXT_PLUGIN_SOURCES})

LINK_LIBRARIES (${LIBXML2_LIBRARIES})

TARGET_LINK_LIBRARIES(${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}gettext
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)
