INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(MARKDOWN_GETTEXT_PLUGIN_MOC_CLASSES
markdown.h
markdown_parser.h
markdownreader.h
pmh_definitions.h
)

SET(MARKDOWN_GETTEXT_PLUGIN_SOURCES
markdown.cpp
markdownreader.cpp
markdown_parser.c
)

SET(SCRIBUS_MARKDOWN_GETTEXT_PLUGIN "markdowngettext")


IF(USE_QT5)
    QT5_WRAP_CPP(MARKDOWN_GETTEXT_PLUGIN_MOC_SOURCES ${MARKDOWN_GETTEXT_PLUGIN_MOC_CLASSES})
ELSE(USE_QT5)
    QT4_WRAP_CPP(MARKDOWN_GETTEXT_PLUGIN_MOC_SOURCES ${MARKDOWN_GETTEXT_PLUGIN_MOC_CLASSES})
ENDIF(USE_QT5)

ADD_LIBRARY(${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN} MODULE ${MARKDOWN_GETTEXT_PLUGIN_SOURCES} ${MARKDOWN_GETTEXT_PLUGIN_MOC_SOURCES})

LINK_LIBRARIES (${LIBXML2_LIBRARIES})

TARGET_LINK_LIBRARIES(${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_MARKDOWN_GETTEXT_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}gettext
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)
