INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_GETTEXT_MARKDOWN_PLUGIN_MOC_CLASSES
    markdown.h
    markdownreader.h
)

SET(SCRIBUS_GETTEXT_MARKDOWN_PLUGIN_SOURCES
    markdown.cpp
    markdownreader.cpp
)

SET(SCRIBUS_GETTEXT_MARKDOWN_PLUGIN "markdowngettext")

QT5_WRAP_CPP(MARKDOWN_GETTEXT_PLUGIN_MOC_SOURCES ${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN} MODULE ${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN_MOC_CLASSES} ${MARKDOWN_GETTEXT_PLUGIN_MOC_SOURCES})

# LINK_LIBRARIES (${LIBXML2_LIBRARIES})

TARGET_LINK_LIBRARIES(${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}gettext
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_GETTEXT_MARKDOWN_PLUGIN} ${SCRIBUS_HTML_GT_PLUGIN} ${EXE_NAME})
